--- a/index.html
+++ b/index.html
@@ -71,5 +71,11 @@
   <footer>
     &copy; kaliforkontol | memekexploit
   </footer>
+
+  <!-- Tambahan Audio -->
+  <audio autoplay loop hidden>
+    <source src="horror.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </body>
 </html>
