--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     &copy; kaliforkontol | memekexploit
   </footer>
 
-  <audio id="bgm" loop>
-  <source src="AUD-20250521-WA0008.mp3" type="audio/mpeg">
-</audio>
-
-<button onclick="document.getElementById('bgm').play()">Play Audio</button>
+  <!-- Tambahan Audio -->
+  <audio autoplay loop hidden>
+    <source src="horror.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </body>
 </html>
